@@ -4,7 +4,7 @@
 # Project related configuration options
 #---------------------------------------------------------------------------
 PROJECT_NAME           = libnoise
-PROJECT_NUMBER         = 0.9.0
+PROJECT_NUMBER         = ${LIBNOISE_VERSION}
 OUTPUT_DIRECTORY       = .
 CREATE_SUBDIRS         = NO
 OUTPUT_LANGUAGE        = English
@@ -69,8 +69,7 @@ WARN_LOGFILE           =
 # configuration options related to the input files
 #---------------------------------------------------------------------------
 INPUT                  = ../src/
-FILE_PATTERNS          = *.cpp \
-                         *.h
+FILE_PATTERNS          = *.cpp *.h
 RECURSIVE              = YES
 EXCLUDE                = 
 EXCLUDE_SYMLINKS       = NO
@@ -103,9 +102,11 @@ IGNORE_PREFIX          =
 GENERATE_HTML          = YES
 HTML_OUTPUT            = html
 HTML_FILE_EXTENSION    = .html
-HTML_HEADER            = htmldata/templateheader.html
-HTML_FOOTER            = htmldata/templatefooter.html
-HTML_STYLESHEET        = htmldata/doxygen.css
+# this code is needed if you want to build this doxygen docu for a static wep page as http://libnoise.sourceforge.net/
+#HTML_HEADER            = htmldata/templateheader.html
+#HTML_FOOTER            = htmldata/templatefooter.html
+#HTML_STYLESHEET        = htmldata/doxygen.css
+
 HTML_ALIGN_MEMBERS     = YES
 GENERATE_HTMLHELP      = NO
 CHM_FILE               = 
