@@ -1,6 +1,8 @@
 # http://www.linux-magazin.de/Heft-Abo/Ausgaben/2007/02/Mal-ausspannen
 
-cmake_minimum_required(VERSION 2.6)
+SET(PROJECT_NAME libnoise)
+
+INCLUDE_DIRECTORIES (noise)
 
 set(libSrcs ${libSrcs}
     noisegen.cpp
@@ -44,15 +46,36 @@ set(libSrcs ${libSrcs}
 #     win32/dllmain.cpp
 )
 
-add_library( noise SHARED ${libSrcs})
-add_library( noise-static STATIC ${libSrcs})
+add_library( noise SHARED ${libSrcs} )
+add_library( noise-static STATIC ${libSrcs} )
 
-INCLUDE_DIRECTORIES (noise)
+SET_TARGET_PROPERTIES( noise PROPERTIES LIBNOISE_VERSION 1.0.0 )
+SET_TARGET_PROPERTIES( noise-static PROPERTIES OUTPUT_NAME "noise" )
 
-SET_TARGET_PROPERTIES( noise-static PROPERTIES OUTPUT_NAME "noise")
+# i would to see more projects using these defaults
+ADD_DEFINITIONS( "-Wall -ansi -pedantic" )
 
-install(TARGETS noise DESTINATION lib)
-SET_TARGET_PROPERTIES( noise PROPERTIES VERSION 1.0.0 )
+# project options
+OPTION( BUILD_WITH_DEBUG "Set to OFF to build the library targets without -g" OFF )
+OPTION( BUILD_WITH_OPTIMIZATION "Set to OFF to build the library targets without -O3" ON )
+
+IF (BUILD_WITH_OPTIMIZATION)
+  ADD_DEFINITIONS( "-O3" )
+ENDIF(BUILD_WITH_OPTIMIZATION)
+
+IF (BUILD_WITH_DEBUG)
+  IF (BUILD_WITH_OPTIMIZATION)
+    MESSAGE( FATAL_ERROR "ERROR: BUILD_WITH_OPTIMIZATION AND BUILD_WITH_DEBUG is enabled! Disable BUILD_WITH_OPTIMIZATION when you want to debug the library. In general -O3 can't be used with -g because debuggers fail to display propper values.")
+  ENDIF(BUILD_WITH_OPTIMIZATION)
+  ADD_DEFINITIONS( "-g" )
+ENDIF(BUILD_WITH_DEBUG)
+
+# install include files into /usr/include
+INSTALL( DIRECTORY "${PROJECT_SOURCE_DIR}/src/noise" DESTINATION "/usr/include" )
+
+# install libraries into /lib
+INSTALL( TARGETS noise DESTINATION "/lib" )
+INSTALL( TARGETS noise-static DESTINATION "/lib" )
 
 
 
