@@ -1,6 +1,11 @@
 2009-11-29 
+ * [pending] version should be controlled by cmake instead of a static entry in:
+  - src/ someheaderfile or define
+  - doc/ doxygen definition file
  * [pending] doxygen support is there and optional
- * [pending] wrote 'make install' step using cmake 
+
+
+ * wrote 'make install' step using cmake 
  * WARNING: src/win32/ is not used at all, maybe someone has to test this with win32 ...
  * changed the library #include "noise.h" instead of "noise/noise.h"
    there is no /include directory anymore since one must use src/ as include path now
